DoctorProfileDetail and DoctorProfileDetail api can use ,Maybe